# opencv-basic

./: CMakeLists.txt  README.md  bilateralFilter.cpp  blur.cpp  boxfilter.cpp  calcHist.cpp  camera.cpp  chinese_word.jfif  compareHist.cpp  connectedComponent.cpp  contourArea.cpp  cvt_color.cpp  dilate.cpp  distance_transform.cpp  draw.cpp  edge_detection_canny.cpp  edge_detection_introduce.cpp  edge_detection_laplacian.cpp  erode.cpp  findContours.cpp  fitLine.cpp  gaussFill.cpp  gaussFilter.cpp  houghLine.cpp  imPyramid.cpp  im_write.cpp  mean_std.cpp  medianBlur.cpp  moments.cpp  morphologyEx.cpp  normalize.cpp  outerPloy.cpp  perspectoveWarp.cpp  read_mat.cpp  rice.jfif  road1.jfif  road2.jfif  sepFilter.cpp  split_merge.cpp  test3.jfif  (+5 more)
